@@ -324,7 +324,7 @@ void
 pedicure_pos_processor::
 aggregate_vcf(const std::string& /*chrom*/, const pos_t& pos, const std::string& vcf_line)
 {
-	std::ostream& bos(*_streams.denovo_osptr());
+    std::ostream& bos(*_streams.denovo_osptr());
 //    std::ostream& bos(std::cout);
 
     // case in order
