@@ -310,11 +310,11 @@ score_site_instance(
 #ifdef HETALTSNPMODEL // future-proofing: do not remove unless you are sure we will not be adding hetalt SNP model to scoring
         if (si.is_hetalt())
             var_case = CALIBRATION_MODEL::HetAltSNP;
-        else
+        //else
 #endif
 
 #ifdef DEBUG_MODEL
-            //log_os << "Im doing a logistic model varcase: " << var_case <<  "\n";
+        //log_os << "Im doing a logistic model varcase: " << var_case <<  "\n";
 #endif
 
         const featuremap features = si.get_site_qscore_features(normal_depth());
