@@ -1,4 +1,5 @@
-- Pedicure multi-sample calling introduced for SNVs and Indel + PL field added (tickets PED10-19)
+- STARKA-335 restore breakend filters for germline gVCF output
+- Multi-sample calling introduced for SNVs and Indel + PL field added (tickets PED10-19)
 - STARKA-317 Enable CRAM input, improve per-chrom depth estimation 
 - STARKA-306 fix rare chunk size boundary defect in RangeMap
 - STARKA-323 refactor STARKA-293 to allow reuse of general accelerated binom
